--- a/Plex.App.Insights.Core/Plex.App.Insights.Core.csproj
+++ b/Plex.App.Insights.Core/Plex.App.Insights.Core.csproj
@@ -4,13 +4,14 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>2.22.2</Version>
+    <Version>2.22.3</Version>
     <Authors>Tom Lee</Authors>
     <Company>Tom Lee</Company>
     <PackageProjectUrl>https://github.com/NamNguyen09/plex-app-insight</PackageProjectUrl>
     <RepositoryUrl>https://github.com/NamNguyen09/plex-app-insight</RepositoryUrl>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <PackageReleaseNotes>- Add extension to registry Application Insights without profiler</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
